# animachine-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  animachine.pc.in
src/: CMakeLists.txt  animachine.cpp  audio.cpp  file.cpp  text.cpp  util.cpp  util.h  video.cpp
